TP/TP3/java_errors
Something.java:1: error: Something is not abstract and does not override abstract method foo(boolean) in InterfaceSomething
public class Something implements InterfaceSomething{
       ^
Something.java:49: error: incompatible types: int cannot be converted to Something[]
        return baz;
               ^
Something.java:55: error: incompatible types: int cannot be converted to Something[]
        return baz;
               ^
Note: Something.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
